# vrc-counter

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
examples/plots/: Cargo.toml
prisma/: Cargo.toml  schema.prisma
prisma/migrations/20240820094546_init/: migration.sql
src/: logger.rs  main.rs
